--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./src/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <ul class="gallery"></ul>
 
-    <script src="../src/js/1-gallery.js"></script>
+    <script src="./js/1-gallery.js"></script>
 
 </body>
 
