--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Home work 9</title>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-    <a href="../css/styles.css" />
+    <a href="./css/styles.css" />
 </head>
 
 <body>
