--- a/src/2-form.html
+++ b/src/2-form.html
@@ -22,7 +22,7 @@
         </label>
         <button type="submit">Submit</button>
     </form>
-
+    <script type="module" src="./js/2-form.js"></script>
 
 </body>
 
